--- a/Component/Footer.html
+++ b/Component/Footer.html
@@ -30,103 +30,119 @@
   <!-- ... -->
 
   <!-- Footer section -->
-  <footer class="has-footer-widgets p-4 mt-auto" style="background-color: black; color: #d2d2d3;">
-    <div class="container footer-top">
-      <div class="row footer-row-1">
-        <!-- Logo and About Us Column -->
-        <div class="col-md-5 widget widget_text  float-left">
-          <aside id="custom_html-1" class="widget_text widget vc_column_vc_container widget_custom_html">
-              <div class="textwidget custom-html-widget">
-                  <img src="https://altcheeni.com/wp-content/uploads/2022/01/Mainlogo2.png" />
-                  <p style="    display: block;
-        margin-block-start: 1em;
-        margin-block-end: 1em;
-        margin-inline-start: 0px;
-        margin-inline-end: 0px;
-        font-family: Poppins;
-        font-weight: 400">
-                      Get the latest updates on new products and upcoming sales
-                  </p>
-                  </a>
-              </div>
-          </aside>
-          <aside class="d-flex justify-content-start ">
-              <div class="sidebar-social-networks">
-                  <ul>
-                      <li><a href="https://www.facebook.com/altcheeni"><img
-                                  src="https://altcheeni.com/wp-content/uploads/2022/01/facebook-1.png"></a>
-                      </li>
-                      <li><a href="https://www.linkedin.com/company/77772178/"><img
-                                  src="https://altcheeni.com/wp-content/uploads/2022/01/linkedin.png"></a>
-                      </li>
-                      <li><a href="https://www.instagram.com/altcheeni/"><img
-                                  src="https://altcheeni.com/wp-content/uploads/2022/01/instagram.png"></a>
-                      </li>
-                  </ul>
-              </div>
-          </aside>
-      </div>
-
-        <!-- Information Column -->
-        <div class="col-md-2 widget widget_text">
-          <h4 class="widget-title" id="informationToggle" style="color: whitesmoke;">Information</h4>
-          <div class="menu-about-container mt-4">
-            <ul id="menu-about" class="menu" style="color: #d2d2d3;">
-              <li><i class="fas fa-angle-double-right mr-2" style="text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);"></i><a href="https://altcheeni.com/">Home</a></li>
-              <li><i class="fas fa-angle-double-right mr-2" style="text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);"></i><a href="https://altcheeni.com/about/">About Us</a></li>
-              <li><i class="fas fa-angle-double-right mr-2" style="text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);"></i><a href="https://altcheeni.com/shop/">Shop</a></li>
-              <li><i class="fas fa-angle-double-right mr-2" style="text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);"></i><a href="https://altcheeni.com/contact/">Contact</a></li>
-              <li><i class="fas fa-angle-double-right mr-2" style="text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);"></i><a href="https://altcheeni.com/terms-conditions/">Terms & Conditions</a></li>
-              <li><i class="fas fa-angle-double-right mr-2" style="text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);"></i><a href="https://altcheeni.com/returns-refunds-cancellation/">Refunds & Cancellation</a></li>
-            </ul>
-          </div>
+ <footer class="footer-section">
+        <div class="container">
+            <div class="footer-cta pt-5 pb-5">
+                <div class="row">
+                    <div class="col-xl-4 col-md-4 mb-30">
+                        <div class="single-cta">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="cta-text">
+                                <h4>Find us</h4>
+                                <span>1010 Avenue, sw 54321, chandigarh</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-4 mb-30">
+                        <div class="single-cta">
+                            <i class="fas fa-phone"></i>
+                            <div class="cta-text">
+                                <h4>Call us</h4>
+                                <span>9876543210 0</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-4 mb-30">
+                        <div class="single-cta">
+                            <i class="far fa-envelope-open"></i>
+                            <div class="cta-text">
+                                <h4>Mail us</h4>
+                                <span>mail@info.com</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-content pt-5 pb-5">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 mb-50">
+                        <div class="footer-widget">
+                            <div class="footer-logo">
+                                <a href="index.html"><img src="https://i.ibb.co/QDy827D/ak-logo.png" class="img-fluid" alt="logo"></a>
+                            </div>
+                            <div class="footer-text">
+                                <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor incididuntut consec tetur adipisicing
+                                elit,Lorem ipsum dolor sit amet.</p>
+                            </div>
+                            <div class="footer-social-icon">
+                                <span>Follow us</span>
+                                <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
+                                <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
+                                <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
+                        <div class="footer-widget">
+                            <div class="footer-widget-heading">
+                                <h3>Useful Links</h3>
+                            </div>
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">about</a></li>
+                                <li><a href="#">services</a></li>
+                                <li><a href="#">portfolio</a></li>
+                                <li><a href="#">Contact</a></li>
+                                <li><a href="#">About us</a></li>
+                                <li><a href="#">Our Services</a></li>
+                                <li><a href="#">Expert Team</a></li>
+                                <li><a href="#">Contact us</a></li>
+                                <li><a href="#">Latest News</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
+                        <div class="footer-widget">
+                            <div class="footer-widget-heading">
+                                <h3>Subscribe</h3>
+                            </div>
+                            <div class="footer-text mb-25">
+                                <p>Don’t miss to subscribe to our new feeds, kindly fill the form below.</p>
+                            </div>
+                            <div class="subscribe-form">
+                                <form action="#">
+                                    <input type="text" placeholder="Email Address">
+                                    <button><i class="fab fa-telegram-plane"></i></button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <!-- My Account Column -->
-        <div class="col-md-2 widget widget_text">
-        <h4 class="widget-title" id="myAccountToggle" style="color: whitesmoke;">My Account</h4>
-        <div class="menu-my-account-container mt-4">
-          <ul id="menu-my-account" class="menu">
-            <li><i class="fas fa-angle-double-right mr-2" style="text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);"></i><a href="https://altcheeni.com/my-account/">My Account</a></li>
-            <li><i class="fas fa-angle-double-right mr-2" style="text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);"></i><a rel="privacy-policy" href="https://altcheeni.com/privacy-policy/">Privacy Policy</a></li>
-            <li><i class="fas fa-angle-double-right mr-2" style="text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);"></i><a href="https://altcheeni.com/disclaimer/">Disclaimer</a></li>
-            <li><i class="fas fa-angle-double-right mr-2" style="text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);"></i><a href="https://altcheeni.com/terms-of-use/">Terms of Use</a></li>
-            <li><i class="fas fa-angle-double-right mr-2" style="text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);"></i><a href="https://altcheeni.com/shipping-policy/">Shipping Policy</a></li>
-            <li><i class="fas fa-angle-double-right mr-2" style="text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);"></i><a href="https://altcheeni.com/seller-registration/">Be a Seller</a></li>
-          </ul>
+        <div class="copyright-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-6 text-center text-lg-left">
+                        <div class="copyright-text">
+                            <p>Copyright &copy; 2018, All Right Reserved <a href="https://codepen.io/anupkumar92/">Anup</a></p>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
+                        <div class="footer-menu">
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Terms</a></li>
+                                <li><a href="#">Privacy</a></li>
+                                <li><a href="#">Policy</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-  
-      <!-- Contact Information Column -->
-      <div class="col-md-3 widget widget_text" style="color: whitesmoke;">
-        <h4 class="widget-title" data-toggle="collapse" data-target="#contactInfo">Contact info.</h4>
-        <div class="sidebar-social-networks address-social-links collapse show" id="contactInfo">
-          <div class="contact-details mt-4">
-            <span><i class="fa fa-map-marker mr-3" style="color: #4DA949;"></i>404/Bandhutva chs
-              , Data mandir road ,
-              santacruz (East) Mumbai 400055</span>
-          <br> <span><a href="mailto:info@altcheeni.com"><i class="fa fa-envelope mr-3"
-                      style="color: #4DA949;"></i>info@altcheeni.com</a></span>
-          <br> <span><a href="tel:983 344 5200"><i class="fa fa-phone mr-3"
-                      style="color: #4DA949;"></i>983 344 5200</a></span>          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-  <div class="footer footer-copyright">
-    <div class="container">
-      <div class="row" style="border-top: 1px solid;">
-        <div class="col-md-6 pt-4">
-          <p class="text-center" style="color: #d2d2d3;">
-            Copyright © 2022 by Altcheeni. All Rights Reserved.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  </footer>
-  
+    </footer>
   <!-- jQuery and Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
