--- a/Component/Wishlist.html
+++ b/Component/Wishlist.html
@@ -328,6 +328,79 @@
     </div>
   </div>
 
+  <section id="wishlist">
+    <div class="WishlistPage p-3 mr-3">
+      <div class="row d-flex justify-content-center ">
+        <div class="col-md-10 col-12  ml-3 ml-md-4  " style="box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2)">
+
+          <div class="title">
+            <div class="row">
+
+              <div class="col align-self-center text-right text-muted pr-5 mb-5">3 items</div>
+            </div>
+          </div>
+
+          <div class="row  pb-3   pr-md-3">
+            <div class="col-3 col-md-2 ">
+              <img class="img-fluid " style=" width: 90px;" src="../assets/img/LoginLogo.jpeg">
+            </div>
+            <div class="col col-md-4 ">
+              <div class="row text-muted text-wrap-ellipsis">
+                <a href="#" style="color:rgb(39, 39, 39);text-decoration:none;">
+                  <h6 class="card-title font-weight-bold text-wrap-ellipsis">
+                    Ambriona Keto Chocolate Pack of 3 Sugar Free Dark Chocolate 65% – 72% Cocoa with Almonds
+                    Hazelnut All Natural Lactose Free Sweetened with Stevia Low carb Maltitol Free High
+                    Protein 3 x 50 gm = 150 gm
+                  </h6>
+                </a>
+              </div>
+              <div class="row">100gm</div>
+            </div>
+            <div class=" col-4  p-0 pl-4">
+              <button class="custom-btn w-100"> Add To cart</button>
+              <div class="col- pt-2 ml-md-5">
+                <b>&#8377;</b> 44.00
+              </div>
+            </div>
+            
+            <div class="col col-md-1 ">
+              <button class="close-button p-2 p-md-3 ml-3 ml-md-5" style="outline: none;border-color: #777777;">
+              </button>
+            </div>
+          </div>
+          <div class="row  pb-3   pr-md-3">
+            <div class="col-3 col-md-2 ">
+              <img class="img-fluid " style=" width: 90px;" src="../assets/img/LoginLogo.jpeg">
+            </div>
+            <div class="col col-md-4 ">
+              <div class="row text-muted text-wrap-ellipsis">
+                <a href="#" style="color:rgb(39, 39, 39);text-decoration:none;">
+                  <h6 class="card-title font-weight-bold text-wrap-ellipsis">
+                    Ambriona Keto Chocolate Pack of 3 Sugar Free Dark Chocolate 65% – 72% Cocoa with Almonds
+                    Hazelnut All Natural Lactose Free Sweetened with Stevia Low carb Maltitol Free High
+                    Protein 3 x 50 gm = 150 gm
+                  </h6>
+                </a>
+              </div>
+              <div class="row">100gm</div>
+            </div>
+            <div class=" col-4  p-0 pl-4">
+              <button class="custom-btn w-100"> Add To cart</button>
+              <div class="col- pt-2 ml-md-5">
+                <b>&#8377;</b> 44.00
+              </div>
+            </div>
+            
+            <div class="col col-md-1 ">
+              <button class="close-button p-2 p-md-3 ml-3 ml-md-5" style="outline: none;border-color: #777777;">
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section id="Recommend Items">
     <div class="container mt-5">
       <h3 class="p-3 homeTitle mb-3 text-center" style="   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2)">
