--- a/Component/Shop.html
+++ b/Component/Shop.html
@@ -336,67 +336,61 @@
 
     <!-- Product -->
     <div class="FilterToggle container mb-4 sticky">
-      <div class="row ">
-        <div class="  col-10 w-100 " style="            background-color: #fff;
-        border-radius: 10px;            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);      
-        ">
-
-          <h3 class="fliter-text text-center mt-3 mx-auto">Browse Categories</h2>
+      <div class="CategoryList d-none d-md-inline" style="            background-color: #fff;
+      border-radius: 10px;            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);      
+      ">
+        <div class="container" style="background-color: white;">
+          <div class="row">
+            <div class="col-md-2 col-4 p-0 m-0">
+              <button class="FilterBtn active w-100" data-filter="*">All Products</button>
+            </div>
+            <div class="col-md-2 col-4 p-0 m-0">
+              <button class="FilterBtn w-100" data-filter=".ketchup">Ketchup & Sauces</button>
+            </div>
+            <div class="col-md-2 col-4 p-0 m-0">
+              <button class="FilterBtn w-100" data-filter=".sweets">Sweets</button>
+            </div>
+            <div class="col-md-2 col-4 p-0 p-0 m-0">
+              <button class="FilterBtn w-100" data-filter=".cookies">Cookies</button>
+            </div>
+            <div class="col-md-2 col-4 p-0 m-0">
+              <button class="FilterBtn w-100" data-filter=".chocolates">Chocolates</button>
+            </div>
+            <div class="col-md-2 col-4 p-0 m-0">
+              <button class="FilterBtn w-100" data-filter=".sweeteners">Sweeteners</button>
+            </div>
+            <div class="col-md-2 col-4 p-0 m-0">
+              <button class="FilterBtn w-100" data-filter=".chawanprash">Chawanprash</button>
+            </div>
+            <div class="col-md-2 col-4 p-0 m-0">
+              <button class="FilterBtn w-100" data-filter=".chewing-gums">Chewing Gums</button>
+            </div>
+            <div class="col-md-2 col-4 p-0 m-0">
+              <button class="FilterBtn w-100" data-filter=".snacks">Snacks</button>
+            </div>
+            <div class="col-md-2 col-4 p-0 m-0">
+              <button class="FilterBtn w-100" data-filter=".vinegar">Vinegar</button>
+            </div>
+            <div class="col-md-2 col-4 p-0 m-0">
+              <button class="FilterBtn w-100" data-filter=".diabetic-care-atta">Diabetic Care Atta</button>
+            </div>
+            <div class="col-md-2 col-4 p-0 m-0 ">
+              <button class="FilterBtn w-100" data-filter=".jams-spreads">Jams & Spreads</button>
+            </div>
+            <div class="col-md-2 col-4 p-0 m-0">
+              <button class="FilterBtn w-100" data-filter=".juices-syrups">Juices & Syrups</button>
+            </div>
+          </div>
         </div>
-        <div class="filtertoggle col-2 ">
+      </div>
+      <div class="row ">
+        <div class="filtertoggle col ">
           <a href="#" data-toggle="modal" data-target="#myModal">
             <i class="fas fa-filter" style="color: #fff;"></i>
           </a>
         </div>
 
-      </div>
-    </div>
-    <div class="CategoryList d-none d-md-inline" style="            background-color: #fff;
-    border-radius: 10px;            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);      
-    ">
-      <div class="container" style="background-color: white;">
-        <div class="row">
-          <div class="col-md-2 col-4 p-0 m-0">
-            <button class="FilterBtn active w-100" data-filter="*">All Products</button>
-          </div>
-          <div class="col-md-2 col-4 p-0 m-0">
-            <button class="FilterBtn w-100" data-filter=".ketchup">Ketchup & Sauces</button>
-          </div>
-          <div class="col-md-2 col-4 p-0 m-0">
-            <button class="FilterBtn w-100" data-filter=".sweets">Sweets</button>
-          </div>
-          <div class="col-md-2 col-4 p-0 p-0 m-0">
-            <button class="FilterBtn w-100" data-filter=".cookies">Cookies</button>
-          </div>
-          <div class="col-md-2 col-4 p-0 m-0">
-            <button class="FilterBtn w-100" data-filter=".chocolates">Chocolates</button>
-          </div>
-          <div class="col-md-2 col-4 p-0 m-0">
-            <button class="FilterBtn w-100" data-filter=".sweeteners">Sweeteners</button>
-          </div>
-          <div class="col-md-2 col-4 p-0 m-0">
-            <button class="FilterBtn w-100" data-filter=".chawanprash">Chawanprash</button>
-          </div>
-          <div class="col-md-2 col-4 p-0 m-0">
-            <button class="FilterBtn w-100" data-filter=".chewing-gums">Chewing Gums</button>
-          </div>
-          <div class="col-md-2 col-4 p-0 m-0">
-            <button class="FilterBtn w-100" data-filter=".snacks">Snacks</button>
-          </div>
-          <div class="col-md-2 col-4 p-0 m-0">
-            <button class="FilterBtn w-100" data-filter=".vinegar">Vinegar</button>
-          </div>
-          <div class="col-md-2 col-4 p-0 m-0">
-            <button class="FilterBtn w-100" data-filter=".diabetic-care-atta">Diabetic Care Atta</button>
-          </div>
-          <div class="col-md-2 col-4 p-0 m-0 ">
-            <button class="FilterBtn w-100" data-filter=".jams-spreads">Jams & Spreads</button>
-          </div>
-          <div class="col-md-2 col-4 p-0 m-0">
-            <button class="FilterBtn w-100" data-filter=".juices-syrups">Juices & Syrups</button>
-          </div>
-        </div>
-      </div>
+      </div>  
     </div>
 
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
