--- a/Component/Wishlist.html
+++ b/Component/Wishlist.html
@@ -328,7 +328,7 @@
     </div>
   </div>
 
-  <section id="wishlist">
+  <!-- <section id="wishlist">
     <div class="WishlistPage p-3 mr-3">
       <div class="row d-flex justify-content-center ">
         <div class="col-md-10 col-12  ml-3 ml-md-4  " style="box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2)">
@@ -399,7 +399,286 @@
         </div>
       </div>
     </div>
+  </section> -->
+  
+  <section style="background-color: #eee;" >
+    <div class="container py-2 ">
+      
+      <div class="row justify-content-center mb-3">
+        <div class="col-md-12 col-xl-10">
+          <div class="card shadow-0 border rounded-3 p-0">
+            
+            <div class="card-body">
+              <button class="close float-right " style="outline: none;border-color: #777777;">
+              </button>
+              <div class="row">
+                <div class="col-4 col-sm-4 col-md-4 col-lg-3  p-0 d-flex align-items-center">
+                  <div class="bg-image hover-zoom ripple rounded ripple-surface  ">
+                    <img src="../assets/img/Product-300x300.jpg" class="w-100" />
+                    <a href="#!">
+                      <div class="hover-overlay">
+                        <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                
+                
+                <div class="d-lg-none col-8 col-sm-8 col-md-8 col-lg-3 col-xl-3 pr-0  border-sm-start-none border-start">
+                  <div class="d-flex flex-row align-items-center pt-4">
+                    <p class="mb-1 me-1 mr-4"><b>&#8377;</b> 14.99</p>
+                    <span class="text-danger"><s> <b>&#8377;</b> 21.99</s>
+               
+                    </span>
+                  </div>
+                  <h6 class="text-success">Free shipping</h6>
+ 
+                  <div class="d-flex flex-column mt-3 mt-md-5">
+                    <button class="custom-btn1 " type="button">
+                      Add to wishlist
+                    </button>
+                  </div>
+                </div>
+                <div class="col-12 col-sm-12  col-md-12 col-lg-6 col-xl-6 p-1 p-md-4">
+                  <a href="#" style="color:rgb(39, 39, 39);text-decoration:none;">
+                    <h6 class="card-title font-weight-bold text-wrap-ellipsis mt-2 mt-md-0">
+                      Ambriona Keto Chocolate Pack of 3 Sugar Free Dark Chocolate 65% – 72% Cocoa with Almonds
+                      Hazelnut All Natural Lactose Free Sweetened with Stevia Low carb Maltitol Free High
+                      Protein 3 x 50 gm = 150 gm
+                    </h6>
+                  </a>                  <div class="d-flex flex-row">
+                    <div class="text-danger mb-1 me-2">
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                    </div>
+                    <span class="ml-2">289</span>
+                  </div>
+                  <div class="row">
+                    <div class="col-6 mb-3">
+                      <select id="size" name="size" class="form-control">
+                        <option>100gm</option>
+                        <option>200gm</option>
+                        <option>500gm</option>
+                        <option>1000kg</option>
+                      </select>
+                  </div>
+
+                  <div class="col-6 mb-3">
+                    <select id="size" name="size" class="form-control">
+                      <option>100gm</option>
+                      <option>200gm</option>
+                      <option>500gm</option>
+                      <option>1000kg</option>
+                    </select>
+                </div>
+                  </div>
+ 
+                </div>
+                <div class="d-sm-none d-none d-lg-inline col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
+                  <div class="d-flex flex-row align-items-center pt-4">
+                    <p class="mb-1 me-1 mr-lg-4"><b>&#8377;</b> 14.99</p>
+                    <span class="text-danger"><s> <b>&#8377;</b> 21.99</s>               
+                    </span>
+                  </div>
+                  <h6 class="text-success">Free shipping</h6>
+                  <div class="d-flex flex-column mt-4">
+                    <button class="custom-btn1" type="button">
+                      Add to wishlist
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-center mb-3">
+        <div class="col-md-12 col-xl-10">
+          <div class="card shadow-0 border rounded-3 p-0">
+            
+            <div class="card-body">
+              <button class="close float-right " style="outline: none;border-color: #777777;">
+              </button>
+              <div class="row">
+                <div class="col-4 col-sm-4 col-md-4 col-lg-3  p-0 d-flex align-items-center">
+                  <div class="bg-image hover-zoom ripple rounded ripple-surface  ">
+                    <img src="../assets/img/Product1-300x300.jpeg" class="w-100" />
+                    <a href="#!">
+                      <div class="hover-overlay">
+                        <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                
+                
+                <div class="d-lg-none col-8 col-sm-8 col-md-8 col-lg-3 col-xl-3 pr-0  border-sm-start-none border-start">
+                  <div class="d-flex flex-row align-items-center pt-4 ">
+                    <p class="mb-1 me-1 mr-2"><b>&#8377;</b> 14.99</p>
+                    <span class="text-danger"><s> <b>&#8377;</b> 21.99</s>
+               
+                    </span>
+                  </div>
+                  <h6 class="text-success">Free shipping</h6>
+                  <div class="d-flex flex-column mt-3 mt-md-5">
+                    <button class="custom-btn1 " type="button">
+                      Add to wishlist
+                    </button>
+                  </div>
+                </div>
+                <div class="col-12 col-sm-12  col-md-12 col-lg-6 col-xl-6 p-1 p-md-4">
+                  <a href="#" style="color:rgb(39, 39, 39);text-decoration:none;">
+                    <h6 class="card-title font-weight-bold text-wrap-ellipsis mt-2 mt-md-0">
+                      Ambriona Keto Chocolate Pack of 3 Sugar Free Dark Chocolate 65% – 72% Cocoa with Almonds
+                      Hazelnut All Natural Lactose Free Sweetened with Stevia Low carb Maltitol Free High
+                      Protein 3 x 50 gm = 150 gm
+                    </h6>
+                  </a>                  <div class="d-flex flex-row">
+                    <div class="text-danger mb-1 me-2">
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                    </div>
+                    <span class="ml-2">289</span>
+                  </div>
+                  <div class="row">
+                    <div class="col-6 mb-3">
+                      <select id="size" name="size" class="form-control">
+                        <option>100gm</option>
+                        <option>200gm</option>
+                        <option>500gm</option>
+                        <option>1000kg</option>
+                      </select>
+                  </div>
+
+                  <div class="col-6 mb-3">
+                    <select id="size" name="size" class="form-control">
+                      <option>100gm</option>
+                      <option>200gm</option>
+                      <option>500gm</option>
+                      <option>1000kg</option>
+                    </select>
+                </div>
+                  </div>
+ 
+                </div>
+                <div class="d-sm-none d-none d-lg-inline col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
+                  <div class="d-flex flex-row align-items-center pt-4 ">
+                    <p class="mb-1 me-1 mr-lg-4"><b>&#8377;</b> 14.99</p>
+                    <span class="text-danger"><s> <b>&#8377;</b> 21.99</s>
+               
+                    </span>
+                  </div>
+                  <h6 class="text-success">Free shipping</h6>
+                  <div class="d-flex flex-column mt-4">
+                    <button class="custom-btn1" type="button">
+                      Add to wishlist
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center mb-3">
+        <div class="col-md-12 col-xl-10">
+          <div class="card shadow-0 border rounded-3 p-0">
+            
+            <div class="card-body">
+              <button class="close float-right " style="outline: none;border-color: #777777;">
+              </button>
+              <div class="row">
+                <div class="col-4 col-sm-4 col-md-4 col-lg-3  p-0 d-flex align-items-center">
+                  <div class="bg-image hover-zoom ripple rounded ripple-surface  ">
+                    <img src="../assets/img/Product3-300x300.jpg" class="w-100" />
+                    <a href="#!">
+                      <div class="hover-overlay">
+                        <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                
+                
+                <div class="d-lg-none col-8 col-sm-8 col-md-8 col-lg-3 col-xl-3 pr-0  border-sm-start-none border-start">
+                  <div class="d-flex flex-row align-items-center pt-4 ">
+                    <p class="mb-1 me-1 mr-2"><b>&#8377;</b> 14.99</p>
+                    <span class="text-danger"><s> <b>&#8377;</b> 21.99</s>
+               
+                    </span>
+                  </div>
+                  <h6 class="text-success">Free shipping</h6>
+                  <div class="d-flex flex-column mt-3 mt-md-5">
+                    <button class="custom-btn1 " type="button">
+                      Add to wishlist
+                    </button>
+                  </div>
+                </div>
+                <div class="col-12 col-sm-12  col-md-12 col-lg-6 col-xl-6 p-1 p-md-4">
+                  <a href="#" style="color:rgb(39, 39, 39);text-decoration:none;">
+                    <h6 class="card-title font-weight-bold text-wrap-ellipsis mt-2 mt-md-0">
+                      Ambriona Keto Chocolate Pack of 3 Sugar Free Dark Chocolate 65% – 72% Cocoa with Almonds
+                      Hazelnut All Natural Lactose Free Sweetened with Stevia Low carb Maltitol Free High
+                      Protein 3 x 50 gm = 150 gm
+                    </h6>
+                  </a>                  <div class="d-flex flex-row">
+                    <div class="text-danger mb-1 me-2">
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                    </div>
+                    <span class="ml-2">289</span>
+                  </div>
+                  <div class="row">
+                    <div class="col-6 mb-3">
+                      <select id="size" name="size" class="form-control">
+                        <option>100gm</option>
+                        <option>200gm</option>
+                        <option>500gm</option>
+                        <option>1000kg</option>
+                      </select>
+                  </div>
+
+                  <div class="col-6 mb-3">
+                    <select id="size" name="size" class="form-control">
+                      <option>100gm</option>
+                      <option>200gm</option>
+                      <option>500gm</option>
+                      <option>1000kg</option>
+                    </select>
+                </div>
+                  </div>
+ 
+                </div>
+                <div class="d-sm-none d-none d-lg-inline col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
+                  <div class="d-flex flex-row align-items-center pt-4 ">
+                    <p class="mb-1 me-1 mr-lg-4"><b>&#8377;</b> 14.99</p>
+                    <span class="text-danger"><s> <b>&#8377;</b> 21.99</s>
+               
+                    </span>
+                  </div>
+                  <h6 class="text-success">Free shipping</h6>
+                  <div class="d-flex flex-column mt-4 ">
+                    <button class="custom-btn1" type="button">
+                      Add to wishlist
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </section>
+
 
   <section id="Recommend Items">
     <div class="container mt-5">
@@ -408,12 +687,10 @@
       </h3>
 
       <div class="row">
-
-
         <div class="col-md-2 col-4   ">
           <div class="productCard  ">
-            <div class="productCard-pic hov-img0">
-              <img src="../assets/img/LoginLogo.jpeg" class="" alt="IMG-PRODUCT" />
+                        <div class="productCard-pic hov-img0">
+              <img src="../assets/img/Product-300x300.jpg" class="" alt="IMG-PRODUCT" />
 
               <a href="#" class="quickView-btn p-1 w-75 text-center" data-toggle="modal" data-target="#QuickView"
                 href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -445,7 +722,7 @@
         <div class="col-md-2 col-4   ">
           <div class="productCard  ">
             <div class="productCard-pic hov-img0">
-              <img src="../assets/img/LoginLogo.jpeg" class="" alt="IMG-PRODUCT" />
+              <img src="../assets/img/Product7-300x300.jpg" class="" alt="IMG-PRODUCT" />
 
               <a href="#" class="quickView-btn p-1 w-75 text-center" data-toggle="modal" data-target="#QuickView"
                 href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -476,8 +753,8 @@
 
         <div class="col-md-2 col-4   ">
           <div class="productCard  ">
-            <div class="productCard-pic hov-img0">
-              <img src="../assets/img/LoginLogo.jpeg" class="" alt="IMG-PRODUCT" />
+                        <div class="productCard-pic hov-img0">
+              <img src="../assets/img/Product1-300x300.jpeg" class="" alt="IMG-PRODUCT" />
 
               <a href="#" class="quickView-btn p-1 w-75 text-center" data-toggle="modal" data-target="#QuickView"
                 href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -508,8 +785,8 @@
 
         <div class="col-md-2 col-4   ">
           <div class="productCard  ">
-            <div class="productCard-pic hov-img0">
-              <img src="../assets/img/LoginLogo.jpeg" class="" alt="IMG-PRODUCT" />
+                        <div class="productCard-pic hov-img0">
+              <img src="../assets/img/Product3-300x300.jpg" class="" alt="IMG-PRODUCT" />
 
               <a href="#" class="quickView-btn p-1 w-75 text-center" data-toggle="modal" data-target="#QuickView"
                 href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -540,8 +817,8 @@
 
         <div class="col-md-2 col-4   ">
           <div class="productCard  ">
-            <div class="productCard-pic hov-img0">
-              <img src="../assets/img/LoginLogo.jpeg" class="" alt="IMG-PRODUCT" />
+                        <div class="productCard-pic hov-img0">
+              <img src="../assets/img/Product4.jpg" class="" alt="IMG-PRODUCT" />
 
               <a href="#" class="quickView-btn p-1 w-75 text-center" data-toggle="modal" data-target="#QuickView"
                 href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -572,8 +849,8 @@
 
         <div class="col-md-2 col-4   ">
           <div class="productCard  ">
-            <div class="productCard-pic hov-img0">
-              <img src="../assets/img/LoginLogo.jpeg" class="" alt="IMG-PRODUCT" />
+                        <div class="productCard-pic hov-img0">
+              <img src="../assets/img/Product5-168-300x300.png" class="" alt="IMG-PRODUCT" />
 
               <a href="#" class="quickView-btn p-1 w-75 text-center" data-toggle="modal" data-target="#QuickView"
                 href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
