--- a/assets/Css/main.css
+++ b/assets/Css/main.css
@@ -1,27 +1,7 @@
 /*===========================
 		COMMON css
 ===========================*/
-@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
-html {
-  scroll-behavior: smooth;
-}
 
-body {
-  font-family: "Plus Jakarta Sans", sans-serif !important;
-  font-weight: normal;
-  font-style: normal;
-  color: #5d657b;
-  overflow-x: hidden;
-  background: #f1f5f9;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
 
 a:focus,
 input:focus,
@@ -51,10 +31,11 @@ a {
   transition: all 0.3s ease-out 0s;
 }
 
+
 a,
 a:focus,
 a:hover {
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 i,
