--- a/Component/Wishlist.html
+++ b/Component/Wishlist.html
@@ -401,7 +401,7 @@
     </div>
   </section> -->
   
-  <section style="background-color: #eee;" >
+  <section>
     <div class="container py-2 ">
       
       <div class="row justify-content-center mb-3">
